hphp/hack/test/typecheck/reified_generics/box_arity.php.exp
File "box_arity.php", line 8, characters 7-12:
The type Erased expects 1 type parameter(s) (Typing[4101])
File "box_arity.php", line 11, characters 14-32:
The type Erased expects 1 type parameter(s) (Typing[4101])
File "box_arity.php", line 14, characters 14-33:
The type Reified expects 1 type parameter(s) (Typing[4101])
File "box_arity.php", line 20, characters 15-33:
The type Erased expects 1 type parameter(s) (Typing[4101])
File "box_arity.php", line 22, characters 15-21:
All type arguments must be specified because a type parameter is reified (Typing[4303])
  File "box_arity.php", line 5, characters 7-13:
  Definition is here
File "box_arity.php", line 24, characters 15-34:
The type Reified expects 1 type parameter(s) (Typing[4101])
